--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,11 @@ set(Subsystem "CONSOLE")
 project("${ProjectName}" VERSION 0.1)
 set(CMAKE_CXX_STANDARD 23)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+include(filters)
+
+add_subdirectory(dependencies)
+
 #app executable
 add_executable("${ProjectName}"
         #src files
